7143353: -Xrunhprof fails in Java 7 due to bad switch

Reviewed-by: jrose, sspitsyn